2014-06-11  Martin Pärtel <martin dot partel at gmail dot com>

	* Merged patch to fix GID cache by @alajovic. Thanks! This fixes a problem
	  with group membership checks and a potential crash.
	* Released 1.12.5

2014-06-05  Martin Pärtel <martin dot partel at gmail dot com>

	* Use `lutimes` when `utimensat` is unavailable, as it is on OS X (#6).
	* Copy nanoseconds with --ctime-from-mtime if struct stat.st_mtim etc. are
	  present (#16).
	* Released 1.12.4

2013-09-23  Martin Pärtel <martin dot partel at gmail dot com>

	* Use `utimensat` to support settings mtime/atime on symlinks,
	  and with nanosecond precision.
	* Any "utime" errors when untarring with a modern version of `tar`
	  should now be fixed.
	* Time modifications seem to no longer get caught in FUSE's
	  attribute cache.
	* Now using FUSE API version 26.
	* Released 1.12.3

2013-07-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --chmod-filter, contributed by Anton Ageev. Thanks!
	* Released 1.12.2
	* Project home page is now bindfs.org

2013-05-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed building against latest FUSE e.g. on Ubuntu 13.04.
	* Released 1.12.1

2013-03-01  Martin Pärtel <martin dot partel at gmail dot com>

	* Deprecated --user, --owner and --group
	  in favor of --force-user and --force-group
	  to avoid conflict with standard mount options
	  (issue 25).
	* Released 1.12

2012-09-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix for setgid directories by Jonathan Dieter. Thanks!
	* Run in singlethreaded mode by default.
	* Added --multithreaded option.
	* Documented a race condition in multithreaded mode.
	* Released 1.11

2012-07-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix readdir() yet again, though this only matters in
	  exceedingly rare cases.
	* Fix --enable-debug-output.
	* Released 1.10.7

2012-07-04  Martin Pärtel <martin dot partel at gmail dot com>

	* Use NAME_MAX when pathconf fails.